--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,6 +11,15 @@ homeassistant:
 
   customize: !include customize.yaml
   packages:
+    package_mark: !include people/mark.yaml
+    package_anne: !include people/anne.yaml
+    package_jerome: !include people/jerome.yaml
+    package_ros: !include people/ros.yaml
+    package_thomas: !include people/thomas.yaml
+    package_liane: !include people/liane.yaml
+    package_aneta: !include people/aneta.yaml
+
+
     package_aeotec_multisensor: !include packages/aeotec_multisensor.yaml
     package_camera0: !include packages/dahua-cameras.yaml
     package_hottub: !include packages/hottub.yaml
