--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -15,11 +15,11 @@ views:
         title: Where is Everyone?
         show_header_toggle: false
         entities:
-          - group.mark_present
-          - group.anne_present
-          - group.jerome_present
-          - group.thomas_present
-          - group.aneta_present
+          - binary_sensor.mark_present
+          - binary_sensor.anne_present
+          - binary_sensor.jerome_present
+          - binary_sensor.thomas_present
+          - binary_sensor.aneta_present
       - type: entities
         title: Rooms
         show_header_toggle: false
