--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -25,11 +25,11 @@
 ## Needs either a valid cert or set
 ##  PYTHONWARNINGS="ignore:Unverified HTTPS request"
 ##
-#- platform: unifi
-#  host: cyclops
-#  username: viewer
-#  password: !secret unifi_password
-#  verify_ssl: false
+- platform: unifi
+  host: cyclops
+  username: viewer
+  password: !secret unifi_password
+  verify_ssl: false
 
 - platform: tado
   username: !secret tado_username
