--- a/packages/kitchen/voice-control.yaml
+++ b/packages/kitchen/voice-control.yaml
@@ -23,14 +23,13 @@ google_assistant:
       name: "Kitchen Bright Mode"
       <<: *ga_kitchen_expose
 
+    media_player.outside_amplifier_zone_2:
+      name: "Kitchen Amplifier"
+      <<: *ga_kitchen_expose
+
     media_player.snapcast_client_kitchen_2:
       name: "Kitchen Snapcast"
       <<: *ga_kitchen_expose
-
-    media_player.snapcast_client_outside:
-      name: "Outside Snapcast"
-      expose: true
-      room: "Outside"
 
 script:
   voice_kitchen_off:
