--- a/people/aneta.yaml
+++ b/people/aneta.yaml
@@ -9,6 +9,7 @@ group:
   aneta_present:
     name: "Aneta"
     entities: &presence_entities
+      - device_tracker.anetas_iphone
       - device_tracker.aneta_iphone
       - device_tracker.aneta_iphone_bt
       - device_tracker.aneta_camajakielas2
@@ -21,12 +22,18 @@ binary_sensor:
     prior: 0.66
     probability_threshold: 0.90
     observations:
-      - entity_id: device_tracker.aneta_iphone
-        prob_given_true: 0.8
-        prob_given_false: 0.1
+      # ios platform - loc doesn't update very often
+      - entity_id: device_tracker.anetas_iphone
+        prob_given_true: 0.4
+        prob_given_false: 0.2
         <<: &tracker_default
           platform: 'state'
           to_state: 'home'
+
+      - entity_id: device_tracker.aneta_iphone
+        prob_given_true: 0.8
+        prob_given_false: 0.1
+        <<: *tracker_default
 
       - entity_id: device_tracker.aneta_iphone_bt
         prob_given_true: 0.5
