--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -15,11 +15,16 @@ views:
         title: Where is Everyone?
         show_header_toggle: false
         entities:
-          - binary_sensor.mark_present
-          - binary_sensor.anne_present
-          - binary_sensor.jerome_present
-          - binary_sensor.thomas_present
-          - binary_sensor.aneta_present
+          - entity: binary_sensor.mark_present
+            name: Mark
+          - entity: binary_sensor.anne_present
+            name: Anne
+          - entity: binary_sensor.jerome_present
+            name: Jerome
+          - entity: binary_sensor.thomas_present
+            name: Thomas
+          - entity: binary_sensor.aneta_present
+            name: Aneta
       - type: entities
         title: Rooms
         show_header_toggle: false
