Don't mute kitchen snapcast for Off mode

--- a/packages/kitchen/room.yaml
+++ b/packages/kitchen/room.yaml
@@ -68,8 +68,8 @@ scene:
       ## Leave it on for now
       #media_player.kitchen_amplifier:
       #  state: off
-      media_player.snapcast_client_kitchen_2:
-        is_volume_muted: true
+      #media_player.snapcast_client_kitchen_2:
+      #  is_volume_muted: true
 
   - name: kitchen_cosy
     entities:
