--- a/people/thomas.yaml
+++ b/people/thomas.yaml
@@ -33,7 +33,7 @@ binary_sensor:
           platform: 'state'
           to_state: 'home'
 
-      - entity_id: device_tracker.thomas_iphone
+      - entity_id: device_tracker.thomas_cmtcd
         prob_given_true: 0.8
         prob_given_false: 0.1
         <<: *tracker_default
@@ -48,7 +48,8 @@ binary_sensor:
         prob_given_false: 0.1
         <<: *tracker_default
 
-      - entity_id: device_tracker.thomas_cmtcd
-        prob_given_true: 0.5
-        prob_given_false: 0.1
+      # Work phone - often left at home
+      - entity_id: device_tracker.thomas_iphone
+        prob_given_true: 0.6
+        prob_given_false: 0.3
         <<: *tracker_default
