Set operation mode of generic thermostats
Google Home has a tendency to set Off as operation mode for thermostats.
Set it to 'heat' when changing setpoints otherwise demand remains off.

--- a/packages/mode.yaml
+++ b/packages/mode.yaml
@@ -23,6 +23,7 @@ script:
         data_template:
           entity_id: 'climate.{{room}}_thermostat'
           temperature: "{{ states('input_number.'+room+'_temperature_'+mode) }}"
+          operation_mode: "heat"
       - service: automation.turn_on
         data_template:
           entity_id: 'automation.{{room}}_revert_to_manual'
