--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -32,6 +32,7 @@
       data:
         entity_id: climate.main_heating_thermostat_heating_1
         temperature: 22
+        operation_mode: 'heat'
 
 
 - alias: main_boiler_demand_off
@@ -81,6 +82,7 @@
       data:
         entity_id: climate.annex_heating_thermostat_heating_1
         temperature: 22
+        operation_mode: 'heat'
     - service: notify.automations
       data:
         message: "Annex Heating Demand on"
