--- a/notify/html5-push.yaml
+++ b/notify/html5-push.yaml
@@ -1,4 +1,5 @@
 - name: HTML5
   platform: html5
-  gcm_sender_id: '591650561003'
-  gcm_api_key: !secret fcm_legacy_server_key
+  vapid_email: !secret vapid_email
+  vapid_pub_key: !secret vapid_pub_key
+  vapid_prv_key: !secret vapid_prv_key
