--- a/packages/bedroom-jerome/room.yaml
+++ b/packages/bedroom-jerome/room.yaml
@@ -83,13 +83,13 @@ switch:
     retain: true
 
 media_player:
-  # Google Home Max
-  - name: jerome_s_bedroom
+  - host: google-home-max
+    # name: jerome_s_bedroom
     platform: cast
 
-  # Chromecast?
-  - name: bedroom_speaker
-    platform: cast
+  #- host: ?  # Chromecast?
+  #  name: bedroom_speaker
+  #  platform: cast
 
 automation: !include_dir_merge_list automations
 #script: !include_dir_merge_named scripts
