--- a/packages/kitchen/room.yaml
+++ b/packages/kitchen/room.yaml
@@ -107,7 +107,8 @@ media_player:
   #  host: kitchen
   #  port: 8080
   #
-  - name: kitchen_speaker
+  - host: kitchen-google-home
+    # name: kitchen_speaker
     platform: cast
 
 #automation: !include_dir_merge_list automations
