--- a/configuration.yaml
+++ b/configuration.yaml
@@ -18,6 +18,7 @@ homeassistant:
     package_thomas: !include people/thomas.yaml
     package_liane: !include people/liane.yaml
     package_aneta: !include people/aneta.yaml
+    package_monica: !include people/monica.yaml
 
 
     package_aeotec_multisensor: !include packages/aeotec_multisensor.yaml
