--- a/packages/bedroom-annex2/voice-control.yaml
+++ b/packages/bedroom-annex2/voice-control.yaml
@@ -4,23 +4,23 @@
 google_assistant:
   entity_config:
     climate.bedroom_annex2_thermostat:
-      name: "Annex Bedroom Thermostat"
+      name: "Monica's Bedroom Thermostat"
       <<: &ga_bedroom_annex2_expose
         expose: true
-        room: "Annex Bedroom 2"
+        room: "Monica's Bedroom"
 
     group.bedroom_annex2_lights:
-      name: "Annex Bedroom Lights"
+      name: "Monica's Bedroom Lights"
       <<: *ga_bedroom_annex2_expose
 
     script.voice_bedroom_annex2_off:
-      name: "Annex Bedroom Shutdown"
+      name: "Monica's Bedroom Shutdown"
       <<: *ga_bedroom_annex2_expose
     script.voice_bedroom_annex2_sleep:
-      name: "Annex Bedroom Sleep Mode"
+      name: "Monica's Bedroom Sleep Mode"
       <<: *ga_bedroom_annex2_expose
     script.voice_bedroom_annex2_cosy:
-      name: "Annex Bedroom Cosy Mode"
+      name: "Monica's Bedroom Cosy Mode"
       <<: *ga_bedroom_annex2_expose
 
 script:
