--- a/people/monica.yaml
+++ b/people/monica.yaml
@@ -14,13 +14,14 @@ group:
     entities: &presence_entities
     - device_tracker.monica_phone
     - device_tracker.monica_iphone
-
+    - device_tracker.monica_macbook_pro
+    - device_tracker.monica_macbook_pro_bt
 
 binary_sensor:
   - name: monica_present
     device_class: 'presence'
     platform: 'bayesian'
-    prior: 0.20
+    prior: 0.66
     probability_threshold: 0.90
     observations:
       ## Owntracks
@@ -31,11 +32,21 @@ binary_sensor:
       #  to_state: 'home'
 
       - entity_id: device_tracker.monica_iphone
-        prob_given_true: 0.90
+        prob_given_true: 0.8
         prob_given_false: 0.1
         <<: &tracker_default
           platform: 'state'
           to_state: 'home'
+
+      - entity_id: device_tracker.monica_macbook_pro
+        prob_given_true: 0.5
+        prob_given_false: 0.1
+        <<: *tracker_default
+
+      - entity_id: device_tracker.monica_macbook_pro_bt
+        prob_given_true: 0.3
+        prob_given_false: 0.1
+        <<: *tracker_default
 
 automation:
   - alias: "Calendar Monica Scene"
