Try setting tolerances for guest room thermostat
SpiritZ has better temperature control but is biased low.
It never goes above the temperature necessary to turn the boiler off.
Try to fix this by settings hot_tolerance 0.0 and tweaking cold_tolerance.

--- a/packages/guest_room/heating-on-demand.yaml
+++ b/packages/guest_room/heating-on-demand.yaml
@@ -35,6 +35,8 @@ climate:
     max_temp: 25
     min_temp: 8  # spirit-Z minimum
     target_temp: 10.0
+    cold_tolerance: 0.5
+    hot_tolerance: 0.0
 
 switch:
   - name: guest_room_demand
