network: olive_hub

--- a/network.yaml
+++ b/network.yaml
@@ -8,6 +8,7 @@ entities:
 - device_tracker.ap_central
 - device_tracker.ap_east
 - device_tracker.poe_switch
+- device_tracker.olive_hub
 # media
 - device_tracker.hastur
 - device_tracker.cyclops
