--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -286,22 +286,22 @@ views:
           - device_tracker.ap_east
           - device_tracker.poe_switch
           - device_tracker.olive_hub
-          - device_tracker.hastur
           - device_tracker.cyclops
           - device_tracker.study
           - device_tracker.kitchen_tablet
-          - device_tracker.utilityamp
+          - device_tracker.amazon_92f1b9374
           - device_tracker.kitchen_speaker
-          - device_tracker.amazon_echo
-          - device_tracker.amazon_echo_bt
+          - device_tracker.utilityamp
+          - device_tracker.outside
           - device_tracker.lounge
           - device_tracker.loungetv
           - device_tracker.ballroom
           - device_tracker.ballroomamp
           - device_tracker.library
-          - device_tracker.tado
+          - device_tracker.library_wired
+          - device_tracker.library_tablet
           - device_tracker.bedroommark
-          - device_tracker.bedroommark_chromecast
+          - device_tracker.camera0
           - device_tracker.ricoh213w
           - device_tracker.canonmg5550
       - type: entities
