--- a/packages/lounge/room.yaml
+++ b/packages/lounge/room.yaml
@@ -85,13 +85,13 @@ sensor:
     sensors:
       lounge_east_battery:
         value_template: >
-          {% if states.zwave.lounge_east %}
-            {{ states.zwave.lounge_east.attributes.battery_level }}
+          {% if states.zwave.stellaz_55 %}
+            {{ states.zwave.stellaz_55.attributes.battery_level }}
           {% else %}
             unknown
           {% endif %}
         unit_of_measurement: '%'
-        entity_id: zwave.lounge_east
+        entity_id: zwave.stellaz_55
 
 switch:
   - name: Lounge East Demand
